[project]
name = "dyphira"
version = "0.0.1"
authors = [
  { name="DivinerX", email="loc_yan@outlook.com" },
]
description = "A Python package for interacting with OpenAI via Dyphira"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/DivinerX/dyphira-python"
Issues = "https://github.com/DivinerX/dyphira-python/issues"